--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.11",
     "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.51.23",
+    "graphql": "^16.12.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
+    "rxjs": "^7.8.2",
     "viem": "^2.16.2",
     "wagmi": "^2.10.7"
   },
