--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.51.23",
+    "@uniswap/v3-sdk": "^3.27.0",
     "ethers": "^5.6.6",
     "graphql": "^16.12.0",
     "next": "16.0.10",
